# Virose_Internship

TASK-FINAL/: README.md
TASK-FINAL/Keyboard-input_remote/: CMakeLists.txt  README.md  comm.cpp  comm.hpp  main.cpp
TASK-FINAL/Receiver/src/: main.cpp
TASK-FINAL/Transmitter/src/: main.cpp  main.h  utility.cpp
TASK-FINAL/Webots/controllers/controller-fp/: controller-fp.cpp
TASK-FINAL/Webots/controllers/pose_controller/: pose_controller.py
Task1/: README.md  V1_TLX1BahasaDengklek.cpp  V1_TLX2BungaGabungan.cpp
Task2/: CMakeLists.txt  README.md  Task2.cpp  Task2Rev.cpp
Task3/: README.md
Task3/src/: SapaMenyapa.cpp  utility.cpp
Task4/: README.MD
Task4/include/: packet.hpp  serialSender.hpp  splitter.hpp
Task4/src/: CPFT.cpp  packet.cpp  serialSender.cpp  splitter.cpp
